crates/parser/src/snapshots/parser__latex__tests__parse@command_definition__command_definition_no_impl.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/command_definition/command_definition_no_impl.txt
---
ROOT@0..17
  PREAMBLE@0..17
    COMMAND_DEFINITION@0..17
      COMMAND_NAME@0..11 "\\newcommand"
      CURLY_GROUP_COMMAND@11..17
        L_CURLY@11..12 "{"
        COMMAND_NAME@12..16 "\\foo"
        R_CURLY@16..17 "}"

