crates/parser/src/snapshots/parser__latex__tests__parse@command_definition__command_definition_no_impl_error.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/command_definition/command_definition_no_impl_error.txt
---
ROOT@0..16
  PREAMBLE@0..16
    COMMAND_DEFINITION@0..16
      COMMAND_NAME@0..11 "\\newcommand"
      CURLY_GROUP_COMMAND@11..16
        L_CURLY@11..12 "{"
        COMMAND_NAME@12..16 "\\foo"

