crates/parser/src/snapshots/parser__latex__tests__parse@command_definition__command_definition_simple.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/command_definition/command_definition_simple.txt
---
ROOT@0..23
  PREAMBLE@0..23
    COMMAND_DEFINITION@0..19
      COMMAND_NAME@0..11 "\\newcommand"
      BRACK_GROUP_WORD@11..14
        L_BRACK@11..12 "["
        KEY@12..13
          WORD@12..13 "1"
        R_BRACK@13..14 "]"
      CURLY_GROUP@14..19
        L_CURLY@14..15 "{"
        GENERIC_COMMAND@15..18
          COMMAND_NAME@15..18 "\\id"
        R_CURLY@18..19 "}"
    CURLY_GROUP@19..23
      L_CURLY@19..20 "{"
      TEXT@20..22
        WORD@20..22 "#1"
      R_CURLY@22..23 "}"

