crates/parser/src/snapshots/parser__latex__tests__parse@command_definition__math_operator_no_impl.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/command_definition/math_operator_no_impl.txt
---
ROOT@0..26
  PREAMBLE@0..26
    MATH_OPERATOR@0..26
      COMMAND_NAME@0..20 "\\DeclareMathOperator"
      CURLY_GROUP_COMMAND@20..26
        L_CURLY@20..21 "{"
        COMMAND_NAME@21..25 "\\foo"
        R_CURLY@25..26 "}"

